micro_ecomm/infra/k8s/microservices/search-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    app: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
      - name: search-service
        image: your-dockerhub-username/search-service:latest
        ports:
        - containerPort: 5008
