micro_ecomm/infra/k8s/microservices/search-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: ClusterIP
  ports:
    - port: 5008
      targetPort: 5008
  selector:
    app: search-service
