micro_ecomm/infra/k8s/microservices/search-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-service-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 5008
